# deep-learning-studies

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_models.md  index.ipynb  pyproject.toml  requirements.txt
notebooks/diffusion_models/: diffusion_models.ipynb
notebooks/diffusion_models/mindiffusion/: ddim.py  ddpm.py  unet.py
notebooks/generative_models/autoencoders/: autoencoder.ipynb  cnn_autoencoder.ipynb  variational_autoencoder.ipynb
notebooks/generative_models/decoding_methods/: decoding_methods.ipynb
notebooks/generative_models/diffusion_models/: ddim.py  ddpm.py  ddpm_scheduler.ipynb  ddpm_speed.ipynb  unet.py
notebooks/generative_models/gans/: cgan.ipynb  dcgan.ipynb
notebooks/generative_models/transformers/: transformer_architecture.ipynb
scripts/: make_index.py
