[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Paula Ceccon <paulaceccon4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "^6.5.4"
nbformat = "^5.9.0"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
seaborn = "^0.12.2"
bertviz = "^1.4.0"
transformers = "^4.30.2"
torch = "^2.0.1"
datasets = "^2.13.1"
torchvision = "^0.15.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
